--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ h1 {
 .span_colour {
   color: orange;
 }
-section {
+.flexible-container {
   display: flex;
   margin-bottom: 100px;
 }
@@ -30,6 +30,7 @@ section {
   font-weight: bold;
   padding: 10px 40px;
   border-radius: 5px;
+  
 }
 
 .top-banner {
@@ -38,7 +39,7 @@ section {
 }
 
 .main-4 {
-  margin-top: 100px;
+  margin-top: 80px;
   width: 50%;
   padding-left: 15px;
   text-align: justify;
