--- a/style.css
+++ b/style.css
@@ -5,8 +5,11 @@ body {
 h1 {
   font-size: 50px;
 }
+h2 {
+  font-size: 45px;
+}
 .span_colour {
-  color: orange;
+  color: rgb(21, 121, 8);
 }
 .flexible-container {
   display: flex;
@@ -30,12 +33,12 @@ h1 {
   font-weight: bold;
   padding: 10px 40px;
   border-radius: 5px;
-  
 }
 
 .top-banner {
   background-image: url("images/top-banner.png");
   background-repeat: no-repeat;
+  padding: 30px;
 }
 
 .main-4 {
@@ -56,3 +59,49 @@ h1 {
   background-repeat: no-repeat;
   background-position: right;
 }
+
+.card {
+  box-shadow: 2px 10px 10px rgb(68, 64, 62);
+  border-radius: 7px;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding: 10px;
+  width: 40%;
+}
+
+.experience {
+  background-image: url("./images/exp-bg.png");
+  background-repeat: no-repeat;
+  background-position: left;
+}
+#fullstack{
+    border-left: 7px solid;
+    border-image: linear-gradient(rgb(62, 204, 116),rgb(241, 77, 27));
+    border-image-slice: 1; 
+}
+#baby{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue,cyan);
+    border-image-slice: 1;
+}
+
+footer{
+    text-align: center;
+    color: crimson;
+}
+
+/*.card1{
+      box-shadow: 2px 10px 10px rebeccapurple;
+      margin: 10px;
+      width: 40%;
+      padding: 10px;
+      text-align:justify;
+  }
+
+  .card2{
+    box-shadow: 2px 10px 10px rgb(10, 236, 169);
+    width: 40%;
+    margin: 10px;
+    padding: 10px;
+    text-align:justify;
+}*/
