--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
   font-family: "Poppins", sans-serif;
-  margin: 10px;
+  margin: 0px;
+  box-sizing: border-box;
+  display: wrap;
 }
 h1 {
   font-size: 50px;
@@ -13,7 +15,6 @@ h2 {
 }
 .flexible-container {
   display: flex;
-  margin-bottom: 100px;
 }
 .main-1 {
   width: 50%;
@@ -25,6 +26,12 @@ h2 {
   margin-left: 400px;
   width: 50%;
   height: auto;
+}
+.main-4 {
+  margin-top: 80px;
+  width: 50%;
+  padding-left: 15px;
+  text-align: justify;
 }
 .linkedin {
   text-decoration: none;
@@ -41,16 +48,9 @@ h2 {
   padding: 30px;
 }
 
-.main-4 {
-  margin-top: 80px;
-  width: 50%;
-  padding-left: 15px;
-  text-align: justify;
-}
-
 .second-image {
   margin-top: 80px;
-  margin-left: 150px;
+  margin-left: 100px;
   width: 50%;
   height: auto;
 }
@@ -58,6 +58,7 @@ h2 {
   background-image: url("images/dream-bg.png");
   background-repeat: no-repeat;
   background-position: right;
+  width: 100%;
 }
 
 .card {
@@ -73,21 +74,39 @@ h2 {
   background-image: url("./images/exp-bg.png");
   background-repeat: no-repeat;
   background-position: left;
+  
 }
-#fullstack{
-    border-left: 7px solid;
-    border-image: linear-gradient(rgb(62, 204, 116),rgb(241, 77, 27));
-    border-image-slice: 1; 
-}
-#baby{
-    border-left: 7px solid;
-    border-image: linear-gradient(blue,cyan);
-    border-image-slice: 1;
+.experience h1{
+  text-align: center;
 }
 
-footer{
-    text-align: center;
-    color: crimson;
+#fullstack {
+  border-left: 7px solid;
+  border-image: linear-gradient(rgb(62, 204, 116), rgb(241, 77, 27));
+  border-image-slice: 1;
+}
+#baby {
+  border-left: 7px solid;
+  border-image: linear-gradient(blue, cyan);
+  border-image-slice: 1;
+}
+
+.foot {
+  text-decoration: none;
+  background-color: black;
+  text-align: center;
+  padding: 10px;
+  margin-top: 10px;
+}
+.foot a {
+  color: blanchedalmond;
+  margin-top: 20px;
+  text-decoration: none;
+}
+
+.foot p {
+  color: blanchedalmond;
+  margin-top: 20px;
 }
 
 /*.card1{
@@ -105,3 +124,44 @@ footer{
     padding: 10px;
     text-align:justify;
 }*/
+
+/* .content{
+
+  margin-bottom: 30px;
+
+} */
+.head{
+  text-align: center;
+  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_WxHebQGv5VrsKNIaonKwgsVnfwvL-nuzBw&usqp=CAU');
+  color: #dc2f02;
+  padding-bottom: 2px;
+}
+
+.personal-section {
+  display: flex;
+  background-image: url("https://www.pngitem.com/pimgs/m/552-5527104_png-images-for-website-background-white-background-with.png");
+  width: 100%;
+  color: green;
+  justify-content: space-evenly;
+}
+
+.skill h3 ,h4, h5{
+  color:#921042 ;
+}
+.skill {
+  float: left;
+  width: 40%;
+  padding-left: 200px;
+}
+.education {
+  width: 40%;
+  float: left;
+  padding-left: 300px;
+}
+.web{
+  text-decoration: none;
+}
+
+#clr{
+  color: #1221f5;
+}
